remove hight from tripInfo_menu to prevent text overflow

--- a/src/pages/TripInfoPage/TripInfoMenu/style.module.scss
+++ b/src/pages/TripInfoPage/TripInfoMenu/style.module.scss
@@ -7,7 +7,6 @@
     display: flex;
     flex-direction: column;
     width: 1200px;
-    height: 632px;
     border-radius: 20px;
     margin: 0 auto;
   }
